==============================================

New in this Isabelle version
----------------------------

*** General ***

* Discontinued old form of "escaped symbols" such as \\<forall>.  Only
one backslash should be used, even in ML sources.


*** Pure ***

* On instantiation of classes, remaining undefined class parameters
are formally declared.  INCOMPATIBILITY.


*** HOL ***

* More convenient names for set intersection and union.  INCOMPATIBILITY:

    Set.Int ~>  Set.inter
    Set.Un ~>   Set.union

* Code generator attributes follow the usual underscore convention:
    code_unfold     replaces    code unfold
    code_post       replaces    code post
    etc.
  INCOMPATIBILITY.

* New quickcheck implementation using new code generator.

* New class "boolean_algebra".

* Refinements to lattices classes:
  - added boolean_algebra type class
  - less default intro/elim rules in locale variant, more default
    intro/elim rules in class variant: more uniformity
  - lemma ge_sup_conv renamed to le_sup_iff, in accordance with le_inf_iff
  - dropped lemma alias inf_ACI for inf_aci (same for sup_ACI and sup_aci)
  - renamed ACI to inf_sup_aci
  - class "complete_lattice" moved to separate theory "complete_lattice";
    corresponding constants renamed:
    
    Set.Inf ~>      Complete_Lattice.Inf
    Set.Sup ~>      Complete_Lattice.Sup
    Set.INFI ~>     Complete_Lattice.INFI
    Set.SUPR ~>     Complete_Lattice.SUPR
    Set.Inter ~>    Complete_Lattice.Inter
    Set.Union ~>    Complete_Lattice.Union
    Set.INTER ~>    Complete_Lattice.INTER
    Set.UNION ~>    Complete_Lattice.UNION

  INCOMPATIBILITY.

* Class semiring_div requires superclass no_zero_divisors and proof of
div_mult_mult1; theorems div_mult_mult1, div_mult_mult2,
div_mult_mult1_if, div_mult_mult1 and div_mult_mult2 have been
generalized to class semiring_div, subsuming former theorems
zdiv_zmult_zmult1, zdiv_zmult_zmult1_if, zdiv_zmult_zmult1 and